--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,18 @@
+name: config.yml
+permalink: /blog/:year/:month:day:title
 # theme: jekyll-theme-midnight
 # jekyll-theme-midnight options
 # title: [The title of your site]
 # description: [A short description of your site's purpose]
 # show_downloads: false
 # google_analytics: [Your Google Analytics tracking ID]
-
-plugins:
-  - jekyll-gist
+#plugins:
+#  - jekyll-gist
 #  - jekyll-github-metadata
-  - jekyll-relative-links
-relative_links:
-  enabled: true
-  collections: true
+#  - jekyll-relative-links
+#relative_links:
+#  enabled: true
+#  collections: true
 include:
   - CONTRIBUTING.md
   - README.md
@@ -21,10 +22,8 @@ include:
   - CONTRIBUTING.md
   - ISSUE_TEMPLATE.md
   - PULL_REQUEST_TEMPLATE.md
-gist:
-  noscript: false
-
-## permalink: /blog/:year/:month:day:title
+#gist:
+#  noscript: false
 
 #lsi: false
 #safe: true
