--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,6 @@ name: config.yml
 permalink: /blog/:year/:month:day:title
 plugins:
   - jemoji
+	- jekyll-feed #https://github.com/jekyll/jekyll-feed
+	#automatic /feed.xml; uses name|title, description, url|site.github.url, author
+	#use post date, title, excerpt, id, category, tags
