--- a/.editorconfig
+++ b/.editorconfig
@@ -7,5 +7,5 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{md,json}]
+[*.{md,json,yml}]
 indent_style = space
