--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hville.github.io",
+  "type": "module",
   "version": "1.0.0",
   "description": "schem.ist",
   "scripts": {
@@ -23,6 +24,8 @@
     "grosso-modo": "^4.1.0",
     "lazy-stats": "^3.1.1",
     "norm-dist": "^3.0.1",
+    "pico-parse": "^0.15.1",
+    "prismjs": "^1.24.1",
     "sample-distribution": "^1.3.1"
   }
 }
