--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "1.0.0",
   "description": "schem.ist",
   "scripts": {
-    "build": "unnode _npm",
-    "test": "node ../private/pack-module/cli.js _npm"
+    "build": "unnode _npm"
   },
   "repository": {
     "type": "git",
@@ -18,7 +17,7 @@
   },
   "homepage": "https://github.com/hville/hville.github.io#readme",
   "dependencies": {
-    "@hugov/bench": "^0.9.0",
+    "@hugov/bench": "^1.0.0",
     "@hugov/correl-range": "^0.3.0",
     "@hugov/inhtml": "^0.4.1",
     "@hugov/shorter-string": "^4.0.1",
