--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "schem.ist",
   "scripts": {
-    "build": "unnode _npm"
+    "build": "cd ./docs & unnode _npm"
   },
   "repository": {
     "type": "git",
