--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
   },
   "homepage": "https://github.com/hville/hville.github.io#readme",
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.14.1",
     "@hugov/bench": "^1.0.2",
-    "@hugov/correl-range": "^0.3.0",
+    "@hugov/correl-range": "^0.4.0",
     "@hugov/inhtml": "^0.8.0",
     "@hugov/shorter-string": "^4.0.1",
     "array-order": "^2.2.0",
-    "grosso-modo": "^4.2.0",
+    "codejar": "^3.6.0",
+    "grosso-modo": "^4.3.0",
     "lazy-stats": "^3.1.1",
     "norm-dist": "^3.0.1",
+    "ol": "^6.14.1",
     "prismjs": "^1.27.0",
     "sample-distribution": "^1.5.0"
   },
