--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@hugov/bench": "^2.0.0",
     "@hugov/correl-range": "^0.11.0",
     "@hugov/inhtml": "^1.0.0",
-    "@hugov/shorter-string": "^5.0.0",
+    "@hugov/shorter-string": "^6.0.0",
     "acorn": "^8.9.0",
     "array-order": "^2.2.0",
     "codejar": "^3.7.0",
@@ -31,7 +31,8 @@
     "norm-dist": "^3.0.1",
     "ol": "^7.3.0",
     "sample-distribution": "^1.7.1",
-    "terser": "^5.18.2"
+    "terser": "^5.18.2",
+    "yace": "^0.0.6"
   },
   "devDependencies": {
     "@hugov/unnode": "^0.0.4"
